@@ -2539,7 +2539,7 @@ BATgroupquantile(BAT *b, BAT *g, BAT *e, BAT *s, int tp, double quantile,
 				BBPunfix(g->batCacheid);
 			return bn;
 		}
-		BATsubsort(&t1, &t2, NULL, g, NULL, NULL, 0, 0);
+		BATsort(&t1, &t2, NULL, g, NULL, NULL, 0, 0);
 		if (freeg)
 			BBPunfix(g->batCacheid);
 		g = t1;
@@ -2547,7 +2547,7 @@ BATgroupquantile(BAT *b, BAT *g, BAT *e, BAT *s, int tp, double quantile,
 	} else {
 		t2 = NULL;
 	}
-	BATsubsort(&t1, NULL, NULL, b, t2, g, 0, 0);
+	BATsort(&t1, NULL, NULL, b, t2, g, 0, 0);
 	if (freeb)
 		BBPunfix(b->batCacheid);
 	b = t1;
